# opp_third_laba_sem_3

./: .gitignore  CMakeLists.txt  README.md
include/: Point.h  figure.h  rectangel.h  rectangle.h  square.h  trapezoid.h  vector-figure.h  vector_Points.h
src/: Point.cpp  figure.cpp  main.cpp  rectangle.cpp  square.cpp  trapezoid.cpp  vector_Points.cpp  vector_figure.cpp
